@@ -17,6 +17,9 @@
 # 	queuecrit    - When to crit
 #
 # $Log$
+# Revision 1.4  2004/11/10 15:47:10  jimmyo
+# Made graph_title a parameter for generic/exim_mailqueue (patch by Torstein T. Svendsen, SF#1060834).
+#
 # Revision 1.3  2004/05/20 13:57:12  jimmyo
 # Set categories to some of the plugins.
 #
@@ -45,11 +48,13 @@ SPOOLDIR="unset"
 EXIM=`which exim 2>/dev/null || which exim4 2>/dev/null`
 QUEUEWARN=100
 QUEUECRIT=200
+GRAPHTITLE='Exim Mailqueue'
 
 if [ "$spooldir"  ]; then  SPOOLDIR=$spooldir ; fi
 if [ "$exim"      ]; then      EXIM=$exim     ; fi
 if [ "$queuewarn" ]; then QUEUEWARN=$queuewarn; fi
 if [ "$queuecrit" ]; then QUEUECRIT=$queuecrit; fi
+if [ "$graphtitle" ]; then GRAPHTITLE=$graphtitle; fi
 
 if [ "$SPOOLDIR" = "unset" ]
 then
@@ -84,8 +89,7 @@ fi
 
 if [ "$1" = "config" ]; then
         if [ ! -z $SPOOLDIR ];then
-
-	echo 'graph_title Exim Mailqueue'
+	echo "graph_title $GRAPHTITLE"
 	echo 'graph_args --base 1000 -l 0'
 	echo 'graph_vlabel mails in queue'
 	echo 'graph_category exim'
